apps/base/influxdb/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: influxdb
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow Grafana to read data
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
      ports:
        - port: 8086
          protocol: TCP
    # Allow Vector to write data
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: vector
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vector
      ports:
        - port: 8086
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
